--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                   </div>
                   <br>
                   <div class="col-ms act">
-                    <a href="transfermoney.php"><button>View Customers to transfer</button></a>
+                    <a href="transfermoney.php"><button>View Customers for transaction</button></a>
                   </div>
                   
             </div>
