--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <br>
 
                   <div class="col-ms act">
-                    <a href="transactionhistory.php"><button>Transfer History</button></a>
+                    <a href="transactionhistory.php"><button>Transaction History</button></a>
                   </div>
                   <br>
                   <div class="col-ms act">
